--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <main>
        <aside>
               <h1>غاندي وفردة الحذاء</h1>
-              <article>يُحكى أنّ المهاتما غاندي كان يركض بسرعةٍ ليلحق بالقطار، والذي كان قد بدأ بالتحرك، ولكنّ إحدى فردتي حذائه سقطت أثناء صعودِه على متن القطار، فخلع فردة حذائه الثّانية، ورماها قريباً من الفردة الأولى، فاستغرب أصدقاؤه وسألوه: "لماذا رميت فردة حذائك الأخرى؟" فقال غاندي: "أردتُ للفقير الذي يجد الحذاء أن يجد الفردتين كي يكون قادراً على استخدامهما، فهو لن يستفيد إن وجد فردةً واحدةً، كما أنّني لن أستفيد منها أيضاً!
+              <article>خرى؟" فقال غاندي: "أردتُ للفقير الذي يجد الحذاء أن يجد الفردتين كي يكون !
              
               </article>
               
